# secure_ubuntu

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .yamllint  .yamllintignore  .yamllintrc  CONFIGURATION.md  LICENSE  Makefile  README.md  TESTING.md  TEST_RESULTS.md  Vagrantfile  add-ssh-key.sh  add-ssh-key.yml  ansible.cfg  check-setup.sh  manage-ssh-keys.yml  playbook.yml  pyproject.toml  run.sh  setup-config.sh  test-local.sh  test-syntax.sh
.github/workflows/: ci.yml
group_vars/: all.example.yml  production.example.yml
host_vars/: server.example.yml
inventory/: hosts.example
templates/: 99-security-hardening.conf.j2  audit.rules.j2  issue.net.j2  sshd_config.j2
vars/: default.yml  local.yml.example
