[project]
name = "secure-ubuntu"
version = "0.1.0"
description = "Ansible playbook for initial Ubuntu server hardening"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ansible>=9.0.0",
    "ansible-core>=2.16.0"
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
