[project]
name = "secure-ubuntu"
version = "0.1.0"
description = "Ansible playbook for initial Ubuntu server hardening"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ansible>=9.0.0",
    "ansible-core>=2.16.0"
]

[project.optional-dependencies]
dev = [
    "ansible-lint>=24.10.0",
    "yamllint>=1.35.0",
    "pre-commit>=3.5.0"
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
